# meta_fastdl

./: .travis.yml  CMakeLists.txt  README.md  version_script.lds
.github/: dependabot.yml
configs/: config.hjson
cpp/: ffi.h  main.cpp  main.h
cpp/helper/: fix_minmax.h
rust/: Cargo.toml
rust/src/: build.rs  file_server.rs  lib.rs  module.rs
